2006-05-02  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by eric.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: set NDEBUG for release build
        * kxmlcore/FastMalloc.cpp: Prevent USE_SYSTEM_MALLOC from being defined twice

2006-05-02  Anders Carlsson  <andersca@mac.com>

        Reviewed by Maciej.

        * kxmlcore/HashMap.h:
        (KXMLCore::::operator):
        Return *this

2006-05-01  Tim Omernick  <timo@apple.com>

        Reviewed by Tim Hatcher.

        <rdar://problem/4476875> Support printing for embedded Netscape plugins

        * bindings/npapi.h:
        Fixed struct alignment problem in our npapi.h.  Structs must be 68k-aligned on both pre-Mac OS X
        and Mac OS X systems, as this is what plugins expect.

2006-05-01  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Maciej.
        
        <rdar://problem/4308243> 8F36 Regression: crash in malloc_consolidate if you use a .PAC file

        The original fix missed the oversized cell case. Added a test for "currentThreadIsMainThread || 
        imp->m_destructorIsThreadSafe" where we collect oversized cells.

        We don't have a way to test PAC files yet, so there's no test attached.

        * kjs/collector.cpp:
        (KJS::Collector::collect): test the thread when we collect oversized cells

2006-05-01  Tim Omernick  <timo@apple.com>

        Reviewed by Adele.

        <rdar://problem/4526114> REGRESSION (two days ago): LOG() just prints @ for NSObject substitutions

        * kxmlcore/Assertions.cpp:
        Changed sense of strstr("%@") check.  I already made the same fix to the WebBrowser assertions.

2006-04-28  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by kdecker
        
        Actually apply the change that was reviewed insted of checking it in with an #if 0 (oops).

        * kjs/testkjs.cpp:
        (main): Suppress C runtime alerts

2006-04-28  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by kdecker