@@ -378,6 +378,7 @@ namespace KXMLCore {
         void clear() { resize(0); }
 
         template<typename U> void append(const U&);
+        template<typename U> void append(const Vector<U>&);
         template<typename U> void insert(size_t position, const U&);
         void remove(size_t position);
 
@@ -544,6 +545,15 @@ namespace KXMLCore {
         ++m_size;
     }
 
+    template<typename T, size_t inlineCapacity> template<typename U>
+    inline void Vector<T, inlineCapacity>::append(const Vector<U>& val)
+    {
+        if (size() + val.size() >= capacity())
+            expandCapacity(size() + val.size());
+        for (unsigned i = 0; i < val.size(); i++)
+            append(val[i]);
+    }
+    
     template<typename T, size_t inlineCapacity> template<typename U>
     inline void Vector<T, inlineCapacity>::insert(size_t position, const U& val)
     {
